# stadium_csv_generator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_excel_decryption.yml
data/: uni_codes.csv
include/: bucs.hpp  loading_data.hpp  player.hpp
resources/: excel_decryption.py
src/: bucs.cpp  loading_data.cpp  main.cpp
